# convocapp-agent

./: .gitignore  Dockerfile  pyproject.toml  start.sh
convocapp_agent/: main_mcp.py  model_router.py
convocapp_agent/clients/: duckling.py  llm.py  studio.py
convocapp_agent/models/: match_models.py  mcp_models.py
convocapp_agent/prompts/: classify.txt.tmpl  classify_and_extract.txt.tmpl  extract_where_when.txt.tmpl  prompt_builder.py
convocapp_agent/services/: match.py
convocapp_agent/streamlit/: streamlit_app.py
convocapp_agent/utils/: date.py  location.py
