[tool.poetry]
name = "convocapp_agent"
version = "0.1.0"
description = "Agent for classifying match-related tasks via MCP"
authors = ["Santiago Blankleider <santiago.blankleider@gmail.com>"]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.110.0"
pydantic = "^2.5.3"
requests = "^2.31.0"
uvicorn = "^0.29.0"
jinja2 = "^3.1.6"
dotenv = "^0.9.9"
streamlit = "^1.44.1"
mcp = {extras = ["cli"], version = "^1.6.0"}
fastmcp = "^0.4.1"
aiohttp = "^3.11.16"
deep-translator = "^1.11.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 160
